[gd_scene load_steps=3 format=3 uid="uid://ccddqo4m77atj"]

[ext_resource type="Theme" uid="uid://cxvosobenfply" path="res://Assets/LightTheme.tres" id="2"]
[ext_resource type="Script" path="res://Scripts/Control.gd" id="2_1tprk"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2")
script = ExtResource("2_1tprk")
file_path = "4.2.2023_2028"

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 1930.0
offset_bottom = 1086.0
right_disconnects = true
scroll_offset = Vector2(-40, -123)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 82.0
offset_right = 214.0
offset_bottom = 133.0
theme_override_constants/separation = 10

[node name="NewNode" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+ NODE"

[node name="NewOption" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+ OPTION"

[node name="Feature" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+ FEATURE"

[node name="NewRoll" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+DICE ROLL"

[node name="Save" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "RUN"

[node name="Clear" type="Button" parent="HBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "CLEAR"

[node name="Notification" type="Label" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "SAVED!"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="gui_input" from="GraphEdit" to="." method="_on_GraphEdit_gui_input"]
[connection signal="pressed" from="HBoxContainer/NewNode" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="HBoxContainer/NewOption" to="." method="_on_NewOption_pressed"]
[connection signal="pressed" from="HBoxContainer/Feature" to="." method="_on_feature_pressed"]
[connection signal="pressed" from="HBoxContainer/NewRoll" to="." method="_on_NewRoll_pressed"]
[connection signal="pressed" from="HBoxContainer/Save" to="." method="_on_RunProgram_pressed"]
[connection signal="pressed" from="HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
